# routes/api.php
@@ -14,10 +14,11 @@ use App\Http\Controllers\MailController;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+Route::get('/user', function (Request $request) {
     return $request->user();
 });
-Route::get('test', [MailController::class,'index']);
+Route::get('test', [MailController::class,'index'])->middleware('auth:sanctum');
 Route::get('test-batch', [MailController::class,'jobBatching']);
 Route::get('test-chain', [MailController::class,'jobChaining']);
 Route::post('add-user', [MailController::class,'addUser']);
+Route::post('/login', [MailController::class, 'login']);
